third_party/rust_crates/forks/pin-init/tests/ui/compile-fail/pin_data/twice.stderr
error[E0428]: the name `FooProjection` is defined multiple times
 --> tests/ui/compile-fail/pin_data/twice.rs:4:1
  |
3 | #[pin_data]
  | ----------- previous definition of the type `FooProjection` here
4 | #[pin_data]
  | ^^^^^^^^^^^ `FooProjection` redefined here
  |
  = note: `FooProjection` must be defined only once in the type namespace of this module
  = note: this error originates in the attribute macro `pin_data` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `pin_init::__internal::HasPinData` for type `Foo`
 --> tests/ui/compile-fail/pin_data/twice.rs:4:1
  |
3 | #[pin_data]
  | ----------- first implementation here
4 | #[pin_data]
  | ^^^^^^^^^^^ conflicting implementation for `Foo`
  |
  = note: this error originates in the attribute macro `pin_data` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `Unpin` for type `Foo`
 --> tests/ui/compile-fail/pin_data/twice.rs:4:1
  |
3 | #[pin_data]
  | ----------- first implementation here
4 | #[pin_data]
  | ^^^^^^^^^^^ conflicting implementation for `Foo`
  |
  = note: this error originates in the attribute macro `pin_data` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0592]: duplicate definitions with name `project`
 --> tests/ui/compile-fail/pin_data/twice.rs:4:1
  |
3 | #[pin_data]
  | ----------- other definition for `project`
4 | #[pin_data]
  | ^^^^^^^^^^^ duplicate definitions for `project`
  |
  = note: this error originates in the attribute macro `pin_data` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/ui/compile-fail/pin_data/twice.rs:4:1
  |
4 | #[pin_data]
  | ^^^^^^^^^^^ expected `Pin<&mut usize>`, found `&mut usize`
  |
  = note:         expected struct `Pin<&mut usize>`
          found mutable reference `&mut usize`
  = note: this error originates in the attribute macro `pin_data` (in Nightly builds, run with -Z macro-backtrace for more info)
